clap_derive/tests/ui/subcommand_opt_opt.stderr
error: Option<Option<T>> type is not allowed for subcommand
  --> $DIR/subcommand_opt_opt.rs:17:10
   |
17 |     cmd: Option<Option<Command>>,
   |          ^^^^^^
